# xmonad-config

./: README.md  flake.nix  hie.yaml  xmonad-config.cabal
src/: Main.hs
