cabal-version:      3.0
name:               xmonad-config
version:            0.1.0.0
license:            MIT
copyright:          2021 Balaji Sivaraman
maintainer:         balaji@balajisivaraman.com
author:             Balaji Sivaraman
category:           Web

extra-source-files:
  LICENSE
  README.md

executable xmonad-config
  build-depends:
    , base
    , containers
    , dbus
    , text
    , time
    , utf8-string
    , xmonad
    , xmonad-contrib

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
